Bug 2044600 - Fix icon alignment in infobar r=desktop-theme-reviewers,jules
Differential Revision: https://phabricator.services.mozilla.com/D304486

UltraBlame original commit: 6f4a592b1d8efb5cf2298d293c586641d465ef2f

--- a/toolkit/content/widgets/infobar.css
+++ b/toolkit/content/widgets/infobar.css
@@ -7,6 +7,7 @@
   --info-bar-text-color: light-dark(var(--color-gray-100), var(--color-gray-05));
   --message-bar-border-color: color-mix(in srgb, currentColor 9%, transparent);
   --message-bar-border-radius: var(--border-radius-small);
+  --message-bar-icon-container-margin-block-start: 0;
   position: relative;
 
   &::before {
